hphp/test/slow/class_type_constant/type_constant2.php.expectf
Fatal error: A name is expected here. in %s/test/slow/class_type_constant/type_constant2.php on line 5